tests/NormalTests/paczka2/big_fuzzy/54155202.err
Error in line 16: FGLQIWeK A164 61,5
Error in line 11: jIpjw A569 45,9
Error in line 12: Zab2MIU A569 40,7
Error in line 32: 5Cg2 S235 55,6
Error in line 42: S235 A569 27,8
Error in line 37: lgB A569 88,4
Error in line 56: 32WuL A569 58,0
Error in line 60: 32WuL S121 74,3
Error in line 70: jIpjw S121 63,4
Error in line 77: jIpjw S235 78,8
Error in line 71: S235 A569 83,4
Error in line 78: jIpjw S121 14,9
Error in line 81: jIpjw A164 95,7
Error in line 82: jIpjw S235 80,4
Error in line 66: Zab2MIU A164 57,8
Error in line 97: jIpjw A569 73,8
Error in line 102: jIpjw S235 48,4
Error in line 103: 5Cg2 A569 40,0
Error in line 114: S235 A569 34,6
Error in line 124: S235 S121 31,1
Error in line 126: 32WuL S235 76,2
Error in line 130: 5Cg2 S121 1,0
Error in line 136: 5Cg2 S235 33,6
Error in line 137: 5Cg2 A164 338,1
Error in line 134: S235 S235 217,1
Error in line 159: 32WuL S121 2,3
Error in line 158: lgB S235 52,0
Error in line 168: FGLQIWeK S121 50,4
Error in line 167: jIpjw S121 40,0
Error in line 174: jIpjw S121 21,5
Error in line 162: Zab2MIU S235 98,1
Error in line 188: lgB S121 57,0
Error in line 196: lgB A164 27,6
Error in line 203: 5Cg2 S235 72,3
Error in line 206: lgB A569 487,96
Error in line 200: lgB A569 99,3
Error in line 216: S235 S235 78,6
Error in line 218: jIpjw A569 19,2
Error in line 219: lgB A164 102,0
Error in line 221: jIpjw S121 93,4
Error in line 227: 5Cg2 S121 27,4
Error in line 233: 5Cg2 A164 77,1
Error in line 213: FGLQIWeK S235 30,0
Error in line 237: FGLQIWeK A164 65,8
